<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="20dp"
    tools:context=".customer.views.CustomerSignUp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/create_account"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/caveat_bold"
        app:layout_constraintBottom_toTopOf="@id/picker"/>
    <com.hbb20.CountryCodePicker
        android:id="@+id/picker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        app:layout_constraintVertical_bias="0.3"
        app:ccp_contentColor="@color/colorAccent"
        app:ccp_autoDetectCountry="true"
        app:ccp_showFlag="true"
        app:ccp_showFullName="true"
        app:ccp_showNameCode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customerphoneNoSignUp"
        app:layout_constraintVertical_bias="0.075"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopStart="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="1dp"
        android:hint="@string/phone_no"
        android:textColorHint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/picker"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customerphoneNoSignUpEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customerNameSignUp"
        app:layout_constraintVertical_bias="0.075"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopStart="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="1dp"
        android:hint="@string/name"
        android:textColorHint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/customerphoneNoSignUp"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customerNameSignUpEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customerPasswordSignUp"
        app:layout_constraintVertical_bias="0.075"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopStart="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="1dp"
        android:hint="@string/password"
        android:textColorHint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/customerNameSignUp"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customerPasswordSignUpEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customerVerifyPasswordSignUp"
        app:layout_constraintVertical_bias="0.075"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopStart="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="1dp"
        android:hint="@string/verify_your_password"
        android:textColorHint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/customerPasswordSignUp"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customerVerifyPasswordSignUpEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/joinus_button_bg"
        android:drawableEnd="@drawable/ic_join_us_arrow"
        android:text="@string/join_us"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:onClick="signed"
        app:layout_constraintTop_toBottomOf="@id/customerVerifyPasswordSignUp"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
         />
    <Button
        android:id="@+id/customerSignUpretry"
        app:layout_constraintTop_toBottomOf="@id/customerVerifyPasswordSignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintVertical_bias="0.85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/retry"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:visibility="gone"
        android:drawableStart="@drawable/ic_baseline_autorenew_24"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>