<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="20dp"
    tools:context=".shopowner.ShopOwnerSignUp">
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caveat_bold"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/pick"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/pick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        app:layout_constraintVertical_bias="0.3"
        app:ccp_contentColor="@color/colorAccent"
        app:ccp_autoDetectCountry="true"
        app:ccp_showFlag="true"
        app:ccp_showFullName="true"
        app:ccp_showNameCode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shopOwnerphoneNoSignUp"
        app:layout_constraintVertical_bias="0.075"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopStart="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="1dp"
        android:hint="@string/phone_no"
        android:textColorHint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/pick"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shopOwnerphoneNoSignUpEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ShopOwnerNameSignUp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shopname"
        android:textColorHint="@color/colorAccent"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="1dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/ShopOwnerAddressSignUp"
        app:layout_constraintTop_toBottomOf="@+id/shopOwnerphoneNoSignUp"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shopOwnerNameSignUpEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ShopOwnerAddressSignUp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:textColorHint="@color/colorAccent"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="1dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/ShopOwnerPasswordSignUp"
        app:layout_constraintTop_toBottomOf="@+id/ShopOwnerNameSignUp"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shopOwnerAddressSignUpEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ShopOwnerPasswordSignUp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/colorAccent"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="1dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/ShopOwnerVerifyPasswordSignUp"
        app:layout_constraintTop_toBottomOf="@+id/ShopOwnerAddressSignUp"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shopOwnerPasswordSignUpEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ShopOwnerVerifyPasswordSignUp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verify_your_password"
        android:textColorHint="@color/colorAccent"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="1dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/ShopOwnerPasswordSignUp"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shopOwnerVerifyPasswordSignUpEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/joinus_button_bg"
        android:drawableEnd="@drawable/ic_join_us_arrow"
        android:text="@string/join_us"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ShopOwnerVerifyPasswordSignUp"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/customerSignUpretry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:drawableStart="@drawable/ic_baseline_autorenew_24"
        android:text="@string/retry"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/button"
        app:layout_constraintEnd_toStartOf="@id/button"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button"
        app:layout_constraintVertical_bias="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>