<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/customer_login"
    tools:context=".customer.views.CustomerLoginActivity">

    <com.hbb20.CountryCodePicker
        android:id="@+id/cupicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@drawable/border"
        app:ccp_autoDetectCountry="true"
        app:ccp_contentColor="@color/colorAccent"
        app:ccp_showFlag="true"
        app:ccp_showFullName="true"
        app:ccp_showNameCode="true"
        app:layout_constraintBottom_toTopOf="@+id/customerphoneNoLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customerphoneNoLogin"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_no"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        app:boxStrokeColor="@color/white"
        style="@style/button"
        android:theme="@style/button"
        app:boxStrokeWidth="3dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/customerPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/cupicker">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customerphoneNoLoginEditText"
            android:layout_width="match_parent"
            android:theme="@style/button"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customerPasswordLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="3dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerphoneNoLogin"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customerPasswordLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cubutton2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/enter_button_bg"
        android:drawableEnd="@drawable/ic_join_us_arrow"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customerPasswordLogin"
        app:layout_constraintVertical_bias="0.45" />
    <Button
        android:id="@+id/forgotPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/enter_button_bg"
        android:text="@string/forgotPass"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customerPasswordLogin"
        app:layout_constraintVertical_bias="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>