<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/shopologin"
    tools:context=".shopowner.ShopOwnerLogin">

    <com.hbb20.CountryCodePicker
        android:id="@+id/soccpick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0.8"
        android:background="@drawable/border"
        app:ccp_autoDetectCountry="true"
        app:ccp_contentColor="@color/colorAccent"
        app:ccp_showFlag="true"
        app:ccp_showFullName="true"
        app:ccp_showNameCode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sophoneNoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_no"
        android:layout_marginStart="160dp"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        app:boxStrokeColor="@color/white"
        style="@style/button"
        android:theme="@style/button"
        app:boxStrokeWidth="3dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/soPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/soccpick">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sophoneNoLoginEditText"
            android:layout_width="match_parent"
            android:theme="@style/button"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/soPasswordLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="150dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="3dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sophoneNoLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/soPasswordLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:inputType="textPassword"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sobutton2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/enter_button_bg"
        android:drawableEnd="@drawable/ic_join_us_arrow"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/soPasswordLogin"
        app:layout_constraintVertical_bias="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>